@@ -81,6 +81,7 @@ Version 1.9.9+svn:
    * Added IS_EXPENDABLE_LEADER, which gives a unit the expendable leader icon
    * Added $this_unit support to [harm_unit] and [find_path]
    * Settings by [color_adjust] no longer expire at turn start or over save/load cycles
+   * Implemented bullet= for [objectives], [objective], [gold_carryover], and [note]
  * Miscellaneous and bug fixes:
    * Fixed compilation on all Debian architectures (Debian bug #636193)
    * Fixed handling of #ifver and #ifnver preprocessor directives in wmllint
